2013-10-17  Charles Bayis  <charles.baylis@linaro.org>

	* gcc.dg/builtin-apply2.c: Skip test on arm hardfloat ABI targets.
	* gcc.dg/tls/pr42894.c: Remove dg-options for arm*-*-* targets.
	* gcc.target/arm/thumb-ltu.c: Remove dg-skip-if and require
	effective target arm_thumb1_ok.
	* lib/target-supports.exp
	(check_effective_target_arm_fp16_ok_nocache): Don't force
	-mfloat-abi=soft when building for hardfloat target.

2013-10-17  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/58673
	* gcc.target/powerpc/pr58673-1.c: New file to test whether
	-mquad-word + -mno-vsx-timode causes errors.
	* gcc.target/powerpc/pr58673-2.c: Likewise.

2013-10-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58596
	* g++.dg/cpp0x/lambda/lambda-nsdmi5.C: New

2013-10-17  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/c-output-template.c: New testcase.
	* gcc.target/aarch64/c-output-template-2.c: Likewise.
	* gcc.target/aarch64/c-output-template-3.c: Likewise.

2013-10-17  Michael Hudson-Doyle  <michael.hudson@linaro.org>

	* gcc/testsuite/lib/target-supports.exp
	(check_effective_target_sync_long_long): AArch64 supports
	atomic operations on "long long".
	(check_effective_target_sync_long_long_runtime): AArch64 can
	execute atomic operations on "long long".

2013-10-17  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58143
	* gcc.dg/torture/pr58143-1.c: New testcase.
	* gcc.dg/torture/pr58143-2.c: Likewise.
	* gcc.dg/torture/pr58143-3.c: Likewise.

2013-10-17  Marek Polacek  <polacek@redhat.com>

	PR c/58267
	* gcc.dg/c1x-align-5.c: New test.

2013-10-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58652
	* gfortran.dg/unlimited_polymorphic_12.f90: New.

2013-10-16  Thomas Schwinge  <thomas@codesourcery.com>

	* c-c++-common/cpp/openmp-define-1.c: Move
	dg-require-effective-target fopenmp after dg-do directive.
	* c-c++-common/cpp/openmp-define-2.c: Likewise.
	* gfortran.dg/openmp-define-1.f90: Likewise.